# ML3

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  module_3_NLP_experimental.md  pyproject.toml  task_3_transcript.md
config/: personas.yaml
data/eval_results/: results.json
docs/: ml_system_design_doc.md
scripts/: demo_tenant_isolation.py  measure_ttft.py  run_eval.py
src/mindly/: __init__.py  __main__.py  agent.py  cli.py  config.py  embeddings.py  llm.py  logging_setup.py  personas.py
src/mindly/memory/: __init__.py  extractor.py  models.py  store.py  vector_index.py
tests/: test_tenant_isolation.py
wandb/offline-run-20260614_125752-ggmp05wf/: run-ggmp05wf.wandb
wandb/offline-run-20260614_125752-ggmp05wf/files/: requirements.txt  wandb-metadata.json
wandb/offline-run-20260614_142220-70yzpk6g/: run-70yzpk6g.wandb
wandb/offline-run-20260614_142220-70yzpk6g/files/: requirements.txt  wandb-metadata.json
wandb/offline-run-20260614_155517-jqjvwqsp/: run-jqjvwqsp.wandb
wandb/offline-run-20260614_155517-jqjvwqsp/files/: wandb-metadata.json
