[tool.poetry]
name = "mindly"
version = "0.1.0"
description = "Mindly AI Coach with long-term memory"
authors = ["ML3 Student"]
readme = "README.md"
packages = [{ include = "mindly", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.58.0"
sentence-transformers = "^3.3.1"
numpy = "^1.26.0"
python-dotenv = "^1.0.1"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
click = "^8.1.7"
rich = "^13.9.0"
datasets = "^3.2.0"
wandb = "^0.19.0"
httpx = "^0.28.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[tool.poetry.scripts]
mindly = "mindly.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
